--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^3.6.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "react": "^19.1.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.1",
